9.0.0 (Apr 30, 2021)
 - BREAKING CHANGE: Removed splitSdkMachineIp and splitSdkMachineName configs.
 - BREAKING CHANGE: Deprecated uWSGI local cache.
 - BREAKING CHANGE: Deprecated Python2 support.
    - Removed six, future and futures libs for compatibility between Python2 and Python3.
    - Updated strings encoding to utf-8 by default for Redis.

8.4.1 (Apr 16, 2021)
 - Bumped mmh3cffi dependency which now requires c99 flag to build.

8.4.0 (Jan 6, 2021)
 - Added RecordStats for supporting pipelined recording in redis when treatment call is made.
 - Added hooks support for preforked servers.

8.3.1 (Nov 20, 2020)
 - Fixed error handling when split server fails, so that it doesn't bring streaming down.
 - Added SDK Metadata headers to split & segments API clients

8.3.0 (Nov 4, 2020)
 - Added local impressions deduping. Defaulting to optimized
 - Added support for the new Split streaming architecture. When enabled (default), the SDK will not poll for updates but instead receive notifications every time there's a change in your environments, allowing to process those much quicker. If disabled or in the event of an issue, the SDK will fallback to the known polling mechanism to provide a seamless experience.
 - Updated logging structure so that it's built in terms of a hierarchy with the root at 'splitio'
 - Fixed timing issue which caused factory.ready to return False if called immediately after .block_until_ready()

8.2.1 (Aug 25, 2020)
 - Updated mmh3cffi to version 0.1.5 which fixes xcode12 issue

8.2.0 (Mar 27, 2020)
 - Added support for enabling in-memory cache via config options

8.1.7 (Jan 23, 2020)
 - Removed enum34 dependency for python versions > 3.4

8.1.6 (Oct 31, 2019)
 - Fixed input validation performance issue.

8.1.5 (Oct 15, 2019)
 - Added logic to fetch multiple splits at once on get_treatments/get_treatments_with_config.