@@ -90,7 +90,6 @@ class RedisStorageAdapterTests(object):
             'redisUnixSocketPath': '/tmp/socket',
             'redisEncoding': 'utf-8',
             'redisEncodingErrors': 'strict',
-            'redisCharset': 'utf-8',
             'redisErrors': 'abc',
             'redisDecodeResponses': True,
             'redisRetryOnTimeout': True,
@@ -117,7 +116,6 @@ class RedisStorageAdapterTests(object):
             unix_socket_path='/tmp/socket',
             encoding='utf-8',
             encoding_errors='strict',
-            charset='utf-8',
             errors='abc',
             decode_responses=True,
             retry_on_timeout=True,
@@ -142,7 +140,6 @@ class RedisStorageAdapterTests(object):
             'redisUnixSocketPath': '/tmp/socket',
             'redisEncoding': 'utf-8',
             'redisEncodingErrors': 'strict',
-            'redisCharset': 'utf-8',
             'redisErrors': 'abc',
             'redisDecodeResponses': True,
             'redisRetryOnTimeout': True,
