@@ -4,6 +4,8 @@
  - BREAKING CHANGE: Deprecated Python2 support.
     - Removed six, future and futures libs for compatibility between Python2 and Python3.
     - Updated strings encoding to utf-8 by default for Redis.
+ - BREAKING CHANGE: Deprecated `redisCharset` config.
+ - Added SDK Metadata headers to streaming client.
 
 8.4.1 (Apr 16, 2021)
  - Bumped mmh3cffi dependency which now requires c99 flag to build.
